--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -21,6 +21,16 @@
           <i class="fa fa-group" aria-hidden="true"></i>
           <h3>員工管理</h3>
         </a>
+
+        <a class="manage__item" href="/manage/project/add">
+          <i class="fa fa-plus-square" aria-hidden="true"></i>
+          <h3>建立專案資料</h3>
+        </a>
+
+        <a class="manage__item" href="/manage/project">
+          <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+          <h3>專案管理</h3>
+        </a>
         
         <a class="manage__item" href="/generator">
           <i class="fa fa-file-word-o" aria-hidden="true"></i>
