--- a/views/templates/nav_manage.ejs
+++ b/views/templates/nav_manage.ejs
@@ -6,6 +6,8 @@
       <ul class="navbar__list">
         <li><a href="/manage/employee/add">建立員工資料</a></li>
         <li><a href="/manage/employee">員工管理</a></li>
+        <li><a href="/manage/project/add">建立專案資料</a></li>
+        <li><a href="/manage/project">專案管理</a></li>
         <li><a href="/generator">文件產生器</a></li>
         <li><a href="/">登出</a></li>
       </ul>
