project edit finish
project edit finish

--- a/views/manage_project.ejs
+++ b/views/manage_project.ejs
@@ -19,6 +19,7 @@
         
           <div class="container">
             <!--<h2>Responsive Tables Using LI</h2>-->
+            <div class="project">
             <ul class="responsive-table">
               <li class="table-header">
                 <div class="col col-1">計畫所屬單位</div>
@@ -51,6 +52,7 @@
               </li>
               <% }) %>
             </ul>
+            </div>
           </div>   
       
       </div>
