--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -992,6 +992,18 @@ footer {
   .col-4 {
     flex-basis: 25%;
   }
+  .project .col-1 {
+    flex-basis: 30%;
+  }
+  .project .col-2 {
+    flex-basis: 40%;
+  }
+  .project .col-3 {
+    flex-basis: 10%;
+  }
+  .project .col-4 {
+    flex-basis: 20%;
+  }
   .container .function{
     margin-left: 70px;
   }
