--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1013,3 +1013,137 @@ footer {
   .table-row .col-3{
     margin-top: 15px;
   }
+
+
+
+  /*project*/
+
+.project-container {
+  max-width: 640px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 13px;
+}
+
+ul.ks-cboxtags {
+    list-style: none;
+    padding: 20px;
+}
+ul.ks-cboxtags li{
+  display: inline;
+}
+ul.ks-cboxtags li label{
+    display: inline-block;
+    background-color: rgba(255, 255, 255, .9);
+    border: 2px solid rgba(139, 139, 139, .3);
+    color: #adadad;
+    border-radius: 25px;
+    white-space: nowrap;
+    margin: 3px 0px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    transition: all .2s;
+}
+
+ul.ks-cboxtags li label {
+    padding: 8px 12px;
+    cursor: pointer;
+}
+
+ul.ks-cboxtags li label::before {
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    font-size: 12px;
+    padding: 2px 6px 2px 2px;
+    content: '\f067';
+    transition: transform .3s ease-in-out;
+}
+
+ul.ks-cboxtags li input[type="checkbox"]:checked + label::before {
+    content: '\f00c';
+    transform: rotate(-360deg);
+    transition: transform .3s ease-in-out;
+}
+
+ul.ks-cboxtags li input[type="checkbox"]:checked + label {
+    border: 2px solid #1bdbf8;
+    background-color: #12bbd4;
+    color: #fff;
+    transition: all .2s;
+}
+
+ul.ks-cboxtags li input[type="checkbox"] {
+  display: absolute;
+}
+ul.ks-cboxtags li input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+}
+ul.ks-cboxtags li input[type="checkbox"]:focus + label {
+  border: 2px solid #e9a1ff;
+}
+
+
+/*drag and drop*/
+.facet-container{
+  width: 800px;
+  color: black;
+}
+.facet-container label{
+  font-size: 30px;
+  text-align: center;
+  margin-left: 100px;
+}
+.facet-container .right {
+  float: right;
+}
+.facet-container .left {
+  margin-left: 100px;
+  float: left;
+}
+.facet-container p {
+  clear: both;
+  padding-top: 1em;
+}
+.facet-container .facet-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-right: 10px;
+  background: #eee;
+  padding: 5px;
+  width: 320px;
+  min-height: 150px;
+  font-size: 0.85em;
+}
+.facet-container .facet-list li {
+  margin: 5px; 
+  margin-top: 10px;
+  padding: 5px;
+  font-size: 20px;
+  width: 300px;
+}
+.facet-container .facet-list li.placeholder {
+  height: 20px
+}
+.facet-container .facet {
+  border: 1px solid #bbb;
+  background-color: #fafafa;
+  cursor: move;
+}
+.facet-container .facet.ui-sortable-helper {
+  opacity: 0.5;
+}
+.facet-container .placeholder {
+  border: 1px solid orange;
+  background-color: #fffffd;
+}
+
