--- a/views/manage_employee_edit.ejs
+++ b/views/manage_employee_edit.ejs
@@ -3,7 +3,6 @@
 
 <head>
   <%- include ('templates/head') %>
-    <script type="text/javascript" src="/js/upload_picture.js"></script>
 </head>
 
 <body>
@@ -187,49 +186,44 @@
 
           <!-- start new project -->
           <div class="projectInner" style="visibility: hidden;">
-            <div><h1>新增工作計畫  <i id="add_project" style="color:black;cursor: pointer;" class="fa fa-plus-circle" aria-hidden="true" onclick="addNewProject()"></i><i id="close_project" style="color:red;float:right;margin-right:20px;cursor: pointer;" class="fa fa-remove" aria-hidden="true" onclick="hiddenProjectInner()"></i></h1></div>
-            <% for(var i = 0 ; i < project.length ; i++) { %>
-            <% if(i != 0) { %>  
-              <i class="fa fa-remove" style="color: red; cursor: pointer; float: left; position: absolute; top: <%= 200+(i-1)*130 %>px; padding: 10px;" onclick='removeIcon(this,false)'></i>
-            <% } %>
-            <div class="twins">
-                  <div>
-                        <h2>計畫所屬單位：</h2>
-                  </div>
-                  <div>
-                      <input type="text" name="project_company" id="project_company" value="<%= project[i].project_company %>" />    
-                  </div>
-                  <div>
-                        <h2>計畫名稱：</h2>
-                  </div>
-                  <div>
-                        <input type="text" name="project_name" id="project_name" value="<%= project[i].project_name %>" />
-                  </div>
+            <div><h1><i id="close_project" style="color:red;float:right;margin-right:20px;cursor: pointer;" class="fa fa-remove" aria-hidden="true" onclick="hiddenProjectInner()"></i></h1></div>
+            <div class="facet-container">
+              <div class="left">
+                <label>所有專案</label>
+                <ul id="allFacets" class="facet-list">
+                  <% var flag = false; %>
+                  <% for(var i = 0 ; i < project.length ; i++) { %>
+                    <% flag = false; %>
+                    <% for(var j = 0 ; j < project_employee.length ; j++) { %>
+                      <% 
+                        if(project_employee[j].pid === project[i].pid) 
+                          flag = true;
+                      %>
+                    <% } %>
+                    <% if(!flag) { %>
+                    <li class="facet"><%= project[i].project_company + '-' + project[i].project_name %><input type="hidden" name="all_project" value="<%= project[i].pid %>" /></li>
+                    <% } %>
+                  <% } %>
+                </ul>
+              </div>
+              <div class="right">
+                <label>參與專案</label>
+                <ul id="userFacets" class="facet-list">
+                  <% for(var i = 0 ; i < project.length ; i++) { %>
+                    <% flag = false; %>
+                    <% for(var j = 0 ; j < project_employee.length ; j++) { %>
+                      <% 
+                        if(project_employee[j].pid === project[i].pid) 
+                          flag = true;
+                      %>
+                    <% } %>
+                    <% if(flag) { %>
+                    <li class="facet"><%= project[i].project_company + '-' + project[i].project_name %><input type="hidden" name="all_project" value="<%= project[i].pid %>" /></li>
+                    <% } %>
+                  <% } %>
+                </ul>
+              </div>
             </div>
-
-            <div class="twins">
-                  <div>
-                        <% if(i == 0) {%>
-                          <h2>開始年：</h2>
-                        <% } else{ %>
-                            <h2>起：</h2>
-                        <% } %>
-                  </div>
-                  <div>
-                      <input type="number" id="start_year" name="start_year" min="1900" max="2099" step="1" placeholder="西元年(ex:1999)" value="<%= (project[i].start_year !== null) ? project[i].start_year.substring(0,4) : new Date().getFullYear()%>" />     
-                  </div>
-                  <div>
-                        <% if(i == 0) {%>
-                          <h2>結束年：</h2>
-                        <% } else{ %>
-                            <h2>迄：</h2>
-                        <% } %>
-                  </div>
-                  <div>
-                        <input type="number" id="end_year" name="end_year" min="1900" max="2099" step="1" placeholder="西元年(ex:1999)" value="<%= (project[i].end_year !== null) ? project[i].end_year.substring(0,4) : new Date().getFullYear()%>" />
-                  </div>
-            </div>
-            <% } %>
           </div>
           <!-- end new project -->
       </div>
@@ -239,6 +233,8 @@
             <%= errorMessage %>
               <% } %>
         </div>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
         <script>
           var fixTop = 200;
           var expFixCount = document.querySelectorAll('#company_name').length-1;
@@ -372,113 +368,6 @@
               document.querySelector('.experienceInner').append(twinsDiv);
       }
 
-
-
-
-
-      function addNewProject(){
-        /* 建立第一個twinsdiv */
-              var twinsDiv = document.createElement("div");
-              var firstDiv = document.createElement("div");
-              var secondDiv = document.createElement("div");
-              var thirdDiv = document.createElement("div");
-              var forthDiv = document.createElement("div");
-              var firstH2 = document.createElement("h2");
-              var secondH2 = document.createElement("h2");
-              var firstInput = document.createElement("input");
-              var secondInput = document.createElement("input");
-              var firstTextnode = document.createTextNode("計畫所屬單位：");
-              var secondTextnode = document.createTextNode("計畫名稱：");
-              var icon = document.createElement("i");
-        /* 設定DOM屬性 */
-              twinsDiv.className = 'twins';
-              firstInput.type = 'text';
-              firstInput.name = 'project_company';
-              firstInput.id = 'project_company';
-              secondInput.type = 'text';
-              secondInput.name = 'project_name';
-              secondInput.id = 'project_name';
-
-              icon.className = 'fa fa-remove';
-              icon.style.color = 'red';
-              icon.style.cursor = 'pointer';
-              icon.style.float = 'left';
-              icon.style.position = 'absolute';
-              icon.style.top = fixTop+proFixCount*130+'px';
-              icon.style.padding = 10+'px';
-              icon.onclick = function () {
-                this.nextSibling.nextSibling.remove();
-                this.nextSibling.remove();
-                this.remove();
-                proFixCount--;
-                for(var i = 1 ; i < document.querySelectorAll('.projectInner .fa.fa-remove').length ; i++)
-                {
-                  document.querySelectorAll('.projectInner .fa.fa-remove')[i].style.top = fixTop+(i-1)*130+'px';
-                }
-              };
-              proFixCount++;
-              
-
-         /* 加入到各DOM內最後加入到experience底下 */       
-              firstH2.append(firstTextnode);
-              firstDiv.append(firstH2);
-
-              secondDiv.append(firstInput);
-
-              secondH2.append(secondTextnode);
-              thirdDiv.append(secondH2);
-
-              forthDiv.append(secondInput);
-
-              document.querySelector('.projectInner').append(icon);
-              twinsDiv.append(firstDiv);
-              twinsDiv.append(secondDiv);
-              twinsDiv.append(thirdDiv);
-              twinsDiv.append(forthDiv);
-
-              document.querySelector('.projectInner').append(twinsDiv);
-
-          /* 建立第二個twinsdiv */
-              var twinsDiv = document.createElement("div");
-              var firstDiv = document.createElement("div");
-              var secondDiv = document.createElement("div");
-              var thirdDiv = document.createElement("div");
-              var forthDiv = document.createElement("div");
-              var firstH2 = document.createElement("h2");
-              var secondH2 = document.createElement("h2");
-              var firstInput = document.createElement("input");
-              var secondInput = document.createElement("input");
-              var firstTextnode = document.createTextNode("開始年：");
-              var secondTextnode = document.createTextNode("結束年：");
-          /* 設定DOM屬性 */
-              twinsDiv.className = 'twins';
-              firstInput.type = 'year';
-              firstInput.name = 'start_year';
-              firstInput.id = 'start_year';
-              firstInput.placeholder = '西元年(ex:1999)';
-              secondInput.type = 'year';
-              secondInput.name = 'end_year';
-              secondInput.id = 'end_year';
-              secondInput.placeholder = '西元年(ex:1999)';
-          /* 加入到各DOM內最後加入到project底下 */ 
-              firstH2.append(firstTextnode);
-              firstDiv.append(firstH2);
-
-              secondDiv.append(firstInput);
-
-              secondH2.append(secondTextnode);
-              thirdDiv.append(secondH2);
-
-              forthDiv.append(secondInput);
-
-              twinsDiv.append(firstDiv);
-              twinsDiv.append(secondDiv);
-              twinsDiv.append(thirdDiv);
-              twinsDiv.append(forthDiv);
-
-              document.querySelector('.projectInner').append(twinsDiv);
-      }
-
           function hiddenExperienceInner(){
             document.querySelector('.experienceInner').style.visibility = 'hidden';
           }
@@ -494,6 +383,34 @@
           function visibleProjectInner(){
             document.querySelector('.projectInner').style.visibility = 'visible';
           }
+
+          $(function() {
+            $("#allFacets, #userFacets").sortable({
+              connectWith: "ul",
+              placeholder: "placeholder",
+              delay: 150,
+              update : function(event, ui){       //更新排序之後
+                $(".right input[name='all_project']").attr('name','user_project');
+                $(".left input[name='user_project']").attr('name','all_project');
+              }
+            })
+            .disableSelection()
+            .dblclick( function(e){
+              var item = e.target;
+              if (e.currentTarget.id === 'allFacets') {
+                //move from all to user
+                $(item).fadeOut('fast', function() {
+                  $(item).appendTo($('#userFacets')).fadeIn('slow');
+                });
+              } else {
+                //move from user to all
+                $(item).fadeOut('fast', function() {
+                  $(item).appendTo($('#allFacets')).fadeIn('slow');
+                });
+              }
+            });
+          });
+
         </script>
         <div class="post__btn">
           <button type="submit" class="edit-post__btn">送出</button>
