--- a/views/manage_project.ejs
+++ b/views/manage_project.ejs
@@ -29,6 +29,7 @@
               </li>
               <% const job_title_arr = ['總經理', '副總經理', '協理', '研發經理', '經理', '高級資深工程師', '資深工程師', '系統工程師', '前端工程師', '財務會計經理', '會計']; %>
               <% 
+              if(project.length > 0){
               project.forEach(project => { 
                 let str = (project.start_year.substring(0,4)-1911) + '-' + (project.end_year.substring(0,4)-1911);
               %>
@@ -50,7 +51,7 @@
                 </div>
                 </div>
               </li>
-              <% }) %>
+              <% })} %>
             </ul>
             </div>
           </div>   
